feat: finish gin group ; finish auth
