# docs/swagger.json
@@ -4,55 +4,11 @@
         "contact": {}
     },
     "paths": {
-        "/index": {
-            "get": {
-                "description": "get index",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "首页"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/ping": {
-            "get": {
-                "description": "ping test",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Ping"
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/createUser": {
+        "/admin/createUser": {
             "get": {
                 "description": "create user",
                 "tags": [
-                    "UserInfo"
+                    "Admin"
                 ],
                 "parameters": [
                     {
@@ -101,11 +57,11 @@
                 }
             }
         },
-        "/user/deleteUserByID": {
+        "/admin/deleteUserByID": {
             "get": {
                 "description": "delete user",
                 "tags": [
-                    "UserInfo"
+                    "Admin"
                 ],
                 "parameters": [
                     {
@@ -134,11 +90,11 @@
                 }
             }
         },
-        "/user/getUserByID": {
+        "/admin/getUserByID": {
             "get": {
                 "description": "get userinfo by id",
                 "tags": [
-                    "UserInfo"
+                    "Admin"
                 ],
                 "parameters": [
                     {
@@ -167,11 +123,11 @@
                 }
             }
         },
-        "/user/getUserList": {
+        "/admin/getUserList": {
             "get": {
                 "description": "get userlist",
                 "tags": [
-                    "UserInfo"
+                    "Admin"
                 ],
                 "responses": {
                     "200": {
@@ -191,51 +147,11 @@
                 }
             }
         },
-        "/user/login": {
-            "post": {
-                "description": "user login",
-                "tags": [
-                    "UserInfo"
-                ],
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "用户名",
-                        "name": "name",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "密码",
-                        "name": "password",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Login success",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "500": {
-                        "description": "错误信息",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            }
-        },
-        "/user/updateUser": {
+        "/admin/updateUser": {
             "post": {
                 "description": "update user",
                 "tags": [
-                    "UserInfo"
+                    "Admin"
                 ],
                 "parameters": [
                     {
@@ -277,6 +193,143 @@
                     }
                 ],
                 "responses": {
+                    "500": {
+                        "description": "错误信息",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/index": {
+            "get": {
+                "description": "get index",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "test"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/login": {
+            "post": {
+                "description": "user login",
+                "tags": [
+                    "User"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "密码",
+                        "name": "password",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Login success",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "错误信息",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/ping": {
+            "get": {
+                "description": "ping test",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "test"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/register": {
+            "post": {
+                "description": "register user",
+                "tags": [
+                    "User"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户名 6-20位",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "密码 6-20位",
+                        "name": "password",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "手机号",
+                        "name": "phone",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "邮箱",
+                        "name": "email",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "user list是用户名列表",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
                     "500": {
                         "description": "错误信息",
                         "schema": {
