# router/app.go
@@ -6,21 +6,28 @@ import (
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
+
+	"github.com/TTaket/gochat/middleware"
 )
 
 func Router() *gin.Engine {
 	r := gin.Default()
-
 	docs.SwaggerInfo.BasePath = ""
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
 	r.GET("/ping", service.GetPing)
 	r.GET("/index", service.GetIndex)
-	r.GET("/user/getUserList", service.GetUserList)
-	r.GET("/user/createUser", service.CreateUser)
-	r.GET("/user/getUserByID", service.GetUserByID)
-	r.GET("/user/deleteUserByID", service.DeleteUserByID)
-	r.POST("/user/updateUser", service.UpdateUser)
-	r.POST("/user/login", service.Login)
+	r.POST("/login", service.Login)
+	r.POST("/register", service.Register)
+
+	admin := r.Group("/admin")
+	admin.Use(middleware.JWTAuthMiddleware())
+	{
+		admin.GET("/getUserList", service.GetUserList)
+		admin.GET("/createUser", service.CreateUser)
+		admin.GET("/getUserByID", service.GetUserByID)
+		admin.GET("/deleteUserByID", service.DeleteUserByID)
+		admin.POST("/updateUser", service.UpdateUser)
+	}
 	return r
 }
